--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
           We work with change-oriented executives to help them make better
           decisions, convert those decisions to actions.
         </p>
+      </div>
 
         <div class="grid">
           <div class="items">
@@ -76,9 +77,9 @@
             </p>
           </div>
           <div class="items">
-            <!--  <div class="hidden">
+              <div class="hidden">
                     <button> click</button>
-                </div>-->
+                </div>
 
             <i class="fa-regular fa-face-smile"></i>
             <h2>Lorem, ipsum dolor.</h2>
@@ -89,9 +90,9 @@
             </p>
           </div>
           <div class="items">
-            <!--  <div class="hidden">
+              <div class="hidden">
                     <button> click</button>
-                </div>-->
+                </div>
 
             <i class="fa-regular fa-face-smile"></i>
             <h2>Lorem, ipsum dolor.</h2>
@@ -102,9 +103,9 @@
             </p>
           </div>
           <div class="items">
-            <!--  <div class="hidden">
+              <div class="hidden">
                     <button> click</button>
-                </div>-->
+                </div>
 
             <i class="fa-regular fa-face-smile"></i>
             <h2>Lorem, ipsum dolor.</h2>
@@ -115,9 +116,9 @@
             </p>
           </div>
           <div class="items">
-            <!--  <div class="hidden">
+              <div class="hidden">
                     <button> click</button>
-                </div>-->
+                </div>
 
             <i class="fa-regular fa-face-smile"></i>
             <h2>Lorem, ipsum dolor.</h2>
@@ -128,9 +129,9 @@
             </p>
           </div>
           <div class="items">
-            <!--  <div class="hidden">
+              <div class="hidden">
                     <button> click</button>
-                </div>-->
+                </div>
 
             <i class="fa-regular fa-face-smile"></i>
             <h2>Lorem, ipsum dolor.</h2>
@@ -142,11 +143,59 @@
           </div>
 
         </div>
-      </div>
     </section>
+
+
+    <div class="strategy">
+      <div class="container">
+        <div class="text">
+          <h3>OUR STRATEGY </h3>
+          <h2>
+            Why Should You Choose Us ?
+          </h2>
+          <p>
+          
+  We work with change-oriented executives
+   to help them make better decisions,
+
+          </p>
+
+        </div>
+<ul>
+
+
+  <li>MARKETING
+
+
+    <div>
+      From banking and insurance to wealth management and securities distribution, company dedicated financial services teams serve all major sectors of the industry. Our work draws on more than 15 years of experience, delivered by 5,700 professionals.
+    </div>
+  </li>
+
+  <li>BUISENESS
+
+
+    <div>
+      Among the important considerations in the deal: strategically using the deal to reinforce both companies’ research and development (R&D) capabilities for new products. Fosun provided resources (financial and clinical trial bases) to Ambrx for R&D.    </div>
+  </li>
+  <li>FINANCE
+
+
+    <div>
+      From banking and insurance to wealth management and securities distribution, company dedicated financial services teams serve all major sectors of the industry. Our work draws on more than 15 years of experience, delivered by 5,700 professionals.
+    </div>
+  </li>
+
+</ul>
+
+
+      </div>
+      <img src="man.png" alt="">
+    </div>
     <script
       src="https://kit.fontawesome.com/b9ba9bf89a.js"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
